==> kibu-keyboards/qmk_firmware/qmk_firmware/lib/chibios-contrib/os/hal/ports/HT32/LLD/USBv1/hal_usb_lld.c <==
#include "hal.h"
#define roundup2(x, m) (((x) + (m) - 1) & ~((m) - 1))

void usb_lld_start(USBDriver *usbp){
    if (usbp->state == USB_STOP) {
        /* Enables the peripheral.*/
#if HT32_USB_USE_USB0 == TRUE
        if (&USBD1 == usbp) {
            // enable USB IRQ
            nvicEnableVector(USB_IRQn, HT32_USB_USB0_IRQ_PRIORITY);
            /* USBD_PowerUp */
            USB->CSR = USBCSR_DPWKEN | USBCSR_DPPUEN | USBCSR_LPMODE | USBCSR_PDWN;
            // enable usb interrupts
            USB->ISR = ~0U;
            USB->CSR &= ~USBCSR_DPWKEN;
            USB->IER = USBIER_UGIE | USBIER_SOFIE |
                USBIER_URSTIE | USBIER_RSMIE | USBIER_SUSPIE |
                USBIER_EP0IE;
        }
#endif // HT32_USB_USE_USB1
    }
    /* Configures the peripheral.*/
}

void usb_lld_init_endpoint(USBDriver *usbp, usbep_t ep) {
    if(ep > USB_MAX_ENDPOINTS)
        return;

    const USBEndpointConfig *epcp = usbp->epc[ep];
    uint32_t cfgr = USBEPnCFGR_EPEN | ((uint32_t)ep<<24);
    size_t epmo;

    switch(epcp->ep_mode & USB_EP_MODE_TYPE){
        case USB_EP_MODE_TYPE_CTRL:
            break;
        case USB_EP_MODE_TYPE_ISOC:
            cfgr |= USBEPnCFGR_EPTYPE;
            break;
        case USB_EP_MODE_TYPE_BULK:
            break;
        case USB_EP_MODE_TYPE_INTR:
            break;
        default:
            return;
    }

    if (epcp->in_state != NULL) {
        epmo = usb_epmem_alloc(usbp, epcp->in_maxsize);
        cfgr |= epmo << 0;
        cfgr |= roundup2(epcp->in_maxsize, 4) << 10;
        cfgr |= USBEPnCFGR_EPDIR;
    }

    if (epcp->out_state != NULL) {
        epmo = usb_epmem_alloc(usbp, epcp->out_maxsize);
        if (ep > 0) {
            cfgr |= epmo << 0;
            cfgr |= roundup2(epcp->out_maxsize, 4) << 10;
        }
    }

    USB->EP[ep].CFGR = cfgr;
    USB->EP[ep].IER = (ep == 0) ?
      (USBEPnIER_SDRXIE|USBEPnIER_IDTXIE|USBEPnIER_ODRXIE) :
      (USBEPnIER_ODRXIE|USBEPnIER_IDTXIE);
    USB->IER |= (USBIER_EP0IE << ep);
}

usbepstatus_t usb_lld_get_status_out(USBDriver *usbp, usbep_t ep)
{
    (void)usbp;

    if (ep > USB_MAX_ENDPOINTS)
        return EP_STATUS_DISABLED;
    if ((USB->EP[ep].CFGR & USBEPnCFGR_EPEN) == 0)
        return EP_STATUS_DISABLED;
    if ((USB->EP[ep].CSR & USBEPnCSR_STLRX) != 0)
        return EP_STATUS_STALLED;
    return EP_STATUS_ACTIVE;
}

usbepstatus_t usb_lld_get_status_in(USBDriver *usbp, usbep_t ep) {

  (void)usbp;

  if (ep > USB_MAX_ENDPOINTS)
    return EP_STATUS_DISABLED;
  if ((USB->EP[ep].CFGR & USBEPnCFGR_EPEN) == 0)
    return EP_STATUS_DISABLED;
  if ((USB->EP[ep].CSR & USBEPnCSR_STLRX) != 0)
    return EP_STATUS_STALLED;
  return EP_STATUS_ACTIVE;
}
