==> kibu-keyboards/qmk_firmware/qmk_firmware/lib/chibios-contrib/os/hal/ports/SN32/LLD/SN32F24x/USB/hal_usb_lld.c <==
#include <SN32F240.h>
#include <string.h>
#include "hal.h"
#include "usbhw.h"
#define SN32_USB_IRQ_VECTOR    Vector44
#define SN32_USB_PMA_SIZE      256
#define _usb_isr_invoke_tx_complete_cb(usbp, ep) {                          \
  (usbp)->transmitting &= ~(1 << (ep));                                     \
  osalSysLockFromISR();                                                     \
  osalThreadResumeI(&(usbp)->epc[ep]->in_state->thread, MSG_OK);            \
  osalSysUnlockFromISR();                                                   \
}
#define _usb_isr_invoke_tx_complete_cb(usbp, ep) {                          \
  (usbp)->transmitting &= ~(1 << (ep));                                     \
}

void usb_lld_start(USBDriver *usbp) {

    if (usbp->state == USB_STOP) {
        /* Enables the peripheral.*/
        #if PLATFORM_USB_USE_USB1 == TRUE
        if (&USBD1 == usbp) {
            USB_Init();
            nvicEnableVector(USB_IRQn, 14);
        }
        #endif
    }
    /* Configures the peripheral.*/
}

void usb_lld_init_endpoint(USBDriver *usbp, usbep_t ep) {
    const USBEndpointConfig *epcp = usbp->epc[ep];

    /* Set the endpoint type. */
    switch (epcp->ep_mode & USB_EP_MODE_TYPE) {
        case USB_EP_MODE_TYPE_ISOC:
            break;
        case USB_EP_MODE_TYPE_BULK:
            break;
        case USB_EP_MODE_TYPE_INTR:
            break;
        default:
            break;
    }

    /* IN endpoint? */
    if (epcp->in_state != NULL) {
        // Set endpoint direction flag in USB configuration register
        switch (ep)
        {
        case 1:
            SN_USB->CFG &= ~mskEP1_DIR;
            break;
        case 2:
            SN_USB->CFG &= ~mskEP2_DIR;
            break;
        case 3:
            SN_USB->CFG &= ~mskEP3_DIR;
            break;
        case 4:
            SN_USB->CFG &= ~mskEP4_DIR;
            break;
        case 5:
            SN_USB->CFG &= ~mskEP5_DIR;
            break;
        case 6:
            SN_USB->CFG &= ~mskEP6_DIR;
            break;
        }
    }

    /* OUT endpoint? */
    if (epcp->out_state != NULL) {
        // Set endpoint direction flag in USB configuration register
        // Also enable ACK state
        switch (ep)
        {
        case 1:
            SN_USB->CFG |= mskEP1_DIR;
            break;
        case 2:
            SN_USB->CFG |= mskEP2_DIR;
            break;
        case 3:
            SN_USB->CFG |= mskEP3_DIR;
            break;
        case 4:
            SN_USB->CFG |= mskEP4_DIR;
            break;
        case 5:
            SN_USB->CFG |= mskEP5_DIR;
            break;
        case 6:
            SN_USB->CFG |= mskEP6_DIR;
            break;
        }
    }

    /* Enable endpoint. */
    switch(ep)
    {
        case 1:
            SN_USB->EP1CTL |= mskEPn_ENDP_EN;
            break;
        case 2:
            SN_USB->EP2CTL |= mskEPn_ENDP_EN;
            break;
        case 3:
            SN_USB->EP3CTL |= mskEPn_ENDP_EN;
            break;
        case 4:
            SN_USB->EP4CTL |= mskEPn_ENDP_EN;
            break;
        case 5:
            SN_USB->EP5CTL |= mskEPn_ENDP_EN;
            break;
        case 6:
            SN_USB->EP6CTL |= mskEPn_ENDP_EN;
            break;
    }
}

usbepstatus_t usb_lld_get_status_out(USBDriver *usbp, usbep_t ep) {
    if (ep > USB_MAX_ENDPOINTS)
        return EP_STATUS_DISABLED;
    if (!USB_EPnEnabled(ep))
        return EP_STATUS_DISABLED;
    if (USB_EPnStalled(ep))
        return EP_STATUS_STALLED;
    return EP_STATUS_ACTIVE;
/*
    if (SN_USB->INSTS & mskEP0_OUT) {
        return EP_STATUS_DISABLED;
    } else if (SN_USB->INSTS & mskEP0_OUT_STALL) {
        return EP_STATUS_STALLED;
    } else {
        return EP_STATUS_ACTIVE;
    }
*/
}

usbepstatus_t usb_lld_get_status_in(USBDriver *usbp, usbep_t ep) {
    if (ep > USB_MAX_ENDPOINTS)
        return EP_STATUS_DISABLED;
    if (!USB_EPnEnabled(ep))
        return EP_STATUS_DISABLED;
    if (USB_EPnStalled(ep))
        return EP_STATUS_STALLED;
    return EP_STATUS_ACTIVE;
/*
   if (SN_USB->INSTS & mskEP0_IN) {
       return EP_STATUS_DISABLED;
   } else if (SN_USB->INSTS & mskEP0_IN_STALL) {
       return EP_STATUS_STALLED;
   } else {
       return EP_STATUS_ACTIVE;
   }
*/
}
